Implemented in Memory ConnStoring
